# goose-testing

./: .breakpoints  keep_alive.py  main.py  pyproject.toml
cogs/commands/: fun.py  games.py  misc.py  mod.py  msg.py  msgTriggers.py  role.py  secretCommands.py
cogs/docs/json/: joinMessage.json  leaveMessage.json  reactrole.json  responses.json
