[tool.poetry]
name = "gooses-bot"
version = "0.1.0"
description = ""
authors = ["goose.mp4 <goosegoose.mp4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^1.1.2"
randfacts = "^0.2.6"
pycord = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
